--- a/buoi3/featured.html
+++ b/buoi3/featured.html
@@ -18,9 +18,9 @@
         <nav class="top-nav">
           <ul class="top-nav-list">
             <li class="top-nav-items"><a href="index.html">STORE</a></li>
-            <li class="top-nav-items"><a href="#">COMMUNITY</a></li>
-            <li class="top-nav-items"><a href="#">ABOUT</a></li>
-            <li class="top-nav-items"><a href="#">SUPPORT</a></li>
+            <li class="top-nav-items"><a href="error.html">COMMUNITY</a></li>
+            <li class="top-nav-items"><a href="error.html">ABOUT</a></li>
+            <li class="top-nav-items"><a href="error.html">SUPPORT</a></li>
           </ul>
         </nav>
       </div>
@@ -73,20 +73,20 @@
               <p>190.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="vegas_184x69.jpg" alt="vegas">
+              <p>180.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="secret_184x69.jpg" alt="secret">
+              <p>220.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="dont_starve_184x69.jpg" alt="remnant">
+              <p>165.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="baldur_184x69.jpg" alt="baldur">
+              <p>990.000₫</p>
             </a>
           </div>
         </section>
@@ -95,36 +95,36 @@
           <h1 class="title">UPCOMING</h1>
           <div class="products">
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
+              <img class="product-icon" src="ghost_184x69.jpg" alt="ghost">
+              <p>720.000₫</p>
+            </a>
+            <a class="products-link" href="#">
+              <img class="product-icon" src="human_184x69.jpg" alt="human">
+              <p>970.000₫</p>
+            </a>
+            <a class="products-link" href="#">
+              <img class="product-icon" src="medium_184x69.jpg" alt="medium">
+              <p>350.000₫</p>
+            </a>
+            <a class="products-link" href="#">
+              <img class="product-icon" src="storm_184x69.jpg" alt="storm">
+              <p>500.000₫</p>
+            </a>
+            <a class="products-link" href="#">
+              <img class="product-icon" src="startopia_184x69.jpg" alt="star">
               <p>190.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="iratus_184x69.jpg" alt="iratus">
+              <p>100.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="fb_184x69.jpg" alt="football">
+              <p>790.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
-            </a>
-            <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
-            </a>
-            <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
-            </a>
-            <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
-            </a>
-            <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="capsule_184x69.jpg" alt="observer">
+              <p>250.000₫</p>
             </a>
           </div>
         </section>
