--- a/buoi3/index.html
+++ b/buoi3/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Steam Community</title>
 </head>
 <body>
   <div class="page-container">
@@ -18,9 +18,9 @@
         <nav class="top-nav">
           <ul class="top-nav-list">
             <li class="top-nav-items"><a href="index.html">STORE</a></li>
-            <li class="top-nav-items"><a href="#">COMMUNITY</a></li>
-            <li class="top-nav-items"><a href="#">ABOUT</a></li>
-            <li class="top-nav-items"><a href="#">SUPPORT</a></li>
+            <li class="top-nav-items"><a href="error.html">COMMUNITY</a></li>
+            <li class="top-nav-items"><a href="error.html">ABOUT</a></li>
+            <li class="top-nav-items"><a href="error.html">SUPPORT</a></li>
           </ul>
         </nav>
       </div>
@@ -40,7 +40,7 @@
               <li class="bot-nav-items"><a href="featured.html">Featured</a></li>
               <li class="bot-nav-items"><a href="special-offer.html">Offers</a></li>
               <li class="bot-nav-items"><a href="popular.html">Popular</a></li>
-              <li class="bot-nav-items"><a href="#">Steam Labs</a></li>
+              <li class="bot-nav-items"><a href="error.html">Steam Labs</a></li>
             </div>
 
             <div class="bot-nav-search" id="search-area">
@@ -52,7 +52,7 @@
         </nav>
       </div>
       
-      <h1 class="title">NEW RELEASE</h1>
+      <h1 class="title">NEW RELEASES</h1>
       <div class="main-banner">
         <a href="#">
           <video autoplay muted loop>
