--- a/buoi3/popular.html
+++ b/buoi3/popular.html
@@ -18,9 +18,9 @@
         <nav class="top-nav">
           <ul class="top-nav-list">
             <li class="top-nav-items"><a href="index.html">STORE</a></li>
-            <li class="top-nav-items"><a href="#">COMMUNITY</a></li>
-            <li class="top-nav-items"><a href="#">ABOUT</a></li>
-            <li class="top-nav-items"><a href="#">SUPPORT</a></li>
+            <li class="top-nav-items"><a href="error.html">COMMUNITY</a></li>
+            <li class="top-nav-items"><a href="error.html">ABOUT</a></li>
+            <li class="top-nav-items"><a href="error.html">SUPPORT</a></li>
           </ul>
         </nav>
       </div>
@@ -73,20 +73,20 @@
               <p>190.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="phasmophobia_184x69.jpg" alt="remnant">
+              <p>160.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="baldur_184x69.jpg" alt="remnant">
+              <p>990.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="witch_184x69_alt_assets_5.jpg" alt="remnant">
+              <p>170.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="ame_184x69 (1).jpg" alt="remnant">
+              <p>250.000₫</p>
             </a>
           </div>
         </section>
@@ -95,36 +95,36 @@
           <h1 class="title">UPCOMING</h1>
           <div class="products">
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="monster_184x69 (1).jpg" alt="remnant">
+              <p>140.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="jack_184x69 (1).jpg" alt="remnant">
+              <p>200.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="mono_184x69.jpg" alt="remnant">
+              <p>250.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="capsule_184x69 (1).jpg" alt="remnant">
+              <p>135.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="capsule_184x69 (2).jpg" alt="remnant">
+              <p>150.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="capsule_184x69 (3).jpg" alt="remnant">
+              <p>250.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="capsule_184x69 (4).jpg" alt="remnant">
+              <p>280.000₫</p>
             </a>
             <a class="products-link" href="#">
-              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
-              <p>190.000₫</p>
+              <img class="product-icon" src="dragon_184x69.jpg" alt="remnant">
+              <p>235.000₫</p>
             </a>
           </div>
         </section>
