--- a/buoi3/special-offer.html
+++ b/buoi3/special-offer.html
@@ -62,39 +62,39 @@
               <p>225.000₫</p>
             </a>
             <a class="discounted-products-link" href="#">
-              <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
-              <p style="text-decoration: line-through;">450.000₫</p>
-              <p>225.000₫</p>
+              <img class="product-icon" src="fallout4goty_184x69.jpg" alt="f4">
+              <p style="text-decoration: line-through;">480.000₫</p>
+              <p>144.000₫</p>
             </a>
             <a class="discounted-products-link" href="#">
-              <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
-              <p style="text-decoration: line-through;">450.000₫</p>
-              <p>225.000₫</p>
+              <img class="product-icon" src="tombraider_184x69.jpg" alt="tomb">
+              <p style="text-decoration: line-through;">416.000₫</p>
+              <p>83.000₫</p>
             </a>
             <a class="discounted-products-link" href="#">
-              <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
-              <p style="text-decoration: line-through;">450.000₫</p>
-              <p>225.000₫</p>
+              <img class="product-icon" src="outer_184x69.jpg" alt="outer">
+              <p style="text-decoration: line-through;">990.000₫</p>
+              <p>495.000₫</p>
             </a>
             <a class="discounted-products-link" href="#">
-              <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
-              <p style="text-decoration: line-through;">450.000₫</p>
-              <p>225.000₫</p>
+              <img class="product-icon" src="slay_184x69.jpg" alt="slay">
+              <p style="text-decoration: line-through;">220.000₫</p>
+              <p>110.000₫</p>
             </a>
             <a class="discounted-products-link" href="#">
-              <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
-              <p style="text-decoration: line-through;">450.000₫</p>
-              <p>225.000₫</p>
+              <img class="product-icon" src="hunt_184x69.jpg" alt="hunt">
+              <p style="text-decoration: line-through;">500.000₫</p>
+              <p>275.000₫</p>
             </a>
             <a class="discounted-products-link" href="#">
-              <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
-              <p style="text-decoration: line-through;">450.000₫</p>
-              <p>225.000₫</p>
+              <img class="product-icon" src="f1_184x69.jpg" alt="f1">
+              <p style="text-decoration: line-through;">480.000₫</p>
+              <p>288.000₫</p>
             </a>
             <a class="discounted-products-link" href="#">
-              <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
-              <p style="text-decoration: line-through;">450.000₫</p>
-              <p>225.000₫</p>
+              <img class="product-icon" src="killing_184x69.jpg" alt="kill ">
+              <p style="text-decoration: line-through;">250.000₫</p>
+              <p>80.000₫</p>
             </a>
           </div>
         </section>
@@ -104,9 +104,29 @@
           <section class="categories">
             <div class="products">
               <a class="discounted-products-link" href="#">
-                <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
-                <p style="text-decoration: line-through;">450.000₫</p>
-                <p>225.000₫</p>
+                <img class="product-icon" src="space_184x69 (1).jpg" alt="space">
+                <p style="text-decoration: line-through;">180.000₫</p>
+                <p>131.000₫</p>
+              </a>
+              <a class="discounted-products-link" href="#">
+                <img class="product-icon" src="euro_184x69 (1).jpg" alt="euro">
+                <p style="text-decoration: line-through;">310.000₫</p>
+                <p>75.000₫</p>
+              </a>
+              <a class="discounted-products-link" href="#">
+                <img class="product-icon" src="pummel_184x69 (1).jpg" alt="pum">
+                <p style="text-decoration: line-through;">160.000₫</p>
+                <p>109.000₫</p>
+              </a>
+              <a class="discounted-products-link" href="#">
+                <img class="product-icon" src="rise_184x69 (1).jpg" alt="rise">
+                <p style="text-decoration: line-through;">1.250.000₫</p>
+                <p>312.000₫</p>
+              </a>
+              <a class="discounted-products-link" href="#">
+                <img class="product-icon" src="xcom_184x69 (1).jpg" alt="xcom">
+                <p style="text-decoration: line-through;">1.000.000₫</p>
+                <p>250.000₫</p>
               </a>
               <a class="discounted-products-link" href="#">
                 <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
@@ -114,34 +134,14 @@
                 <p>225.000₫</p>
               </a>
               <a class="discounted-products-link" href="#">
-                <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
-                <p style="text-decoration: line-through;">450.000₫</p>
-                <p>225.000₫</p>
+                <img class="product-icon" src="ver_184x69 (1).jpg" alt="ver">
+                <p style="text-decoration: line-through;">350.000₫</p>
+                <p>62.000₫</p>
               </a>
               <a class="discounted-products-link" href="#">
-                <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
-                <p style="text-decoration: line-through;">450.000₫</p>
-                <p>225.000₫</p>
-              </a>
-              <a class="discounted-products-link" href="#">
-                <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
-                <p style="text-decoration: line-through;">450.000₫</p>
-                <p>225.000₫</p>
-              </a>
-              <a class="discounted-products-link" href="#">
-                <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
-                <p style="text-decoration: line-through;">450.000₫</p>
-                <p>225.000₫</p>
-              </a>
-              <a class="discounted-products-link" href="#">
-                <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
-                <p style="text-decoration: line-through;">450.000₫</p>
-                <p>225.000₫</p>
-              </a>
-              <a class="discounted-products-link" href="#">
-                <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
-                <p style="text-decoration: line-through;">450.000₫</p>
-                <p>225.000₫</p>
+                <img class="product-icon" src="octo_184x69 (1).jpg" alt="octo">
+                <p style="text-decoration: line-through;">1.250.000₫</p>
+                <p>625.000₫</p>
               </a>
             </div>
           </section>
