--- a/buoi3/error.html
+++ b/buoi3/error.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="stylemass.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Steam Community</title>
 </head>
 <body>
-  <div class="page-container">
+  <div style="margin-left: -21px" class="page-container">
 
     <header>
       <div class="main-logo-container">
@@ -18,7 +18,7 @@
         <nav class="top-nav">
           <ul class="top-nav-list">
             <li class="top-nav-items"><a href="index.html">STORE</a></li>
-            <li class="top-nav-items"><a href="#">COMMUNITY</a></li>
+            <li class="top-nav-items"><a href="community.html">COMMUNITY</a></li>
             <li class="top-nav-items"><a href="#">ABOUT</a></li>
             <li class="top-nav-items"><a href="#">SUPPORT</a></li>
           </ul>
@@ -31,31 +31,7 @@
     </header>
 
     <main>
-      
-      <div class="bot-nav-container">
-        <nav class="bot-nav">
-          <ul class="bot-nav-list">
-            <div class="bot-nav-menu">
-              <li class="bot-nav-items"><a href="index.html">Your Store</a></li>
-              <li class="bot-nav-items"><a href="featured.html">Featured</a></li>
-              <li class="bot-nav-items"><a href="special-offer.html">Offers</a></li>
-              <li class="bot-nav-items"><a href="popular.html">Popular</a></li>
-              <li class="bot-nav-items"><a href="#">Steam Labs</a></li>
-            </div>
-
-            <div class="bot-nav-search" id="search-area">
-              <li class="bot-nav-items" id="search">
-                <input id="search-box" type="text" placeholder="search...">
-              </li>
-            </div>
-          </ul>
-        </nav>
-      </div>
-
-      <div class="page-content">
-        <h1 class="title">POPULAR</h1>
-        
-      </div>
+        <h1 class="error">Not available in your country</h1>
     </main>
 
     <footer>
