--- a/buoi3/index.html
+++ b/buoi3/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Steam Community</title>
+  <link rel="icon" href="../favicon-16x16.png">
+  <title>Steam</title>
 </head>
 <body>
   <div class="page-container">
