--- a/buoi3/index.html
+++ b/buoi3/index.html
@@ -119,7 +119,7 @@
             </a>
           </div>
           <div class="more-button">
-            <a href="#">See more...</a>
+            <a href="special-offer.html">See more...</a>
           </div>
         </section>
 
@@ -148,7 +148,7 @@
           </div>
 
           <div class="more-button">
-            <a href="#">See more...</a>
+            <a href="popular.html">See more...</a>
           </div>
         </section>
       </div>
