--- a/buoi3/index.html
+++ b/buoi3/index.html
@@ -55,7 +55,7 @@
       
       <h1 class="title">NEW RELEASES</h1>
       <div class="main-banner">
-        <a href="#">
+        <a href="https://www.youtube.com/watch?v=HtEtY4094ao">
           <video autoplay muted loop>
             <source src="webm_page_bg_english.webm" type="video/webm">
           </video>
