--- a/day4/kqsx.html
+++ b/day4/kqsx.html
@@ -240,12 +240,21 @@
             </tr>
           </tbody>
         </table>
+
+        <div id="kha-panh">
+          <figure>
+            <img src="749076864177586488913943191723062470901760n-15736271421871695474391-crop-1573627146616352463460.png" alt="kha-panh">
+            <figcaption>Chia sẻ của một anh em tham gia gói VIP</figcaption>
+          </figure>
+        </div>
+
       </div>
 
       <div id="right-container">
         <div id="news-title-container">
           <p>Tin tức xố số mới nhất</p>
         </div>
+
         <div id="news-list-container">
           <ul id="news-list">
             <li class="news-list-items"><a href="#">Dự đoán xổ số miền bắc ngày 26-10-2020</a></li>
@@ -253,12 +262,26 @@
             <li class="news-list-items"><a href="#">Dự đoán xổ số miền trung ngày 26-10-2020</a></li>
           </ul>
         </div>
+
       </div>
 
     </main>
 
     <footer>
+      <ul id="footer-nav">
+        <li class="footer-nav-items"><a href="#">Email:adm.ketqua.net@gmail.com</a></li>
+        <li class="footer-nav-items"><a href="#">Skype:ketqua.net</a></li>
+        <li class="footer-nav-items"><a href="#">Liên hệ quảng cáo</a></li>
+        <li class="footer-nav-items"><a href="#">Xổ số Vietlott</a></li>
+      </ul>
+      <div id="copy-logo-slogan">
+        <p>Ketqua.net - Ích nước lợi nhà cái</p>
+        <div id="copy-logo">
+          <img src="_dmca_premi_badge_4.png" alt="">
+          <p>Copyright ketqua.net - 2017</p>
+        </div>
 
+      </div>
     </footer>
 
   </div>
