--- a/day4/kqsx.html
+++ b/day4/kqsx.html
@@ -40,18 +40,31 @@
       </nav>
 
       <div id="logo-container">
-        <img class="logo" src="20160220172641-4a1ca3a3.png" alt="ketqua.net - trang kết quả xổ số lớn nhất Việt Nam">
 
-        <img class="logo" src="1584b98103a7d2be87d5b88d9ba36870.gif" alt="1 nhà ăn 2 nhà">
+          <img class="logo" src="20160220172641-4a1ca3a3.png" alt="ketqua.net - trang kết quả xổ số lớn nhất Việt Nam">
+          <img class="logo" src="1584b98103a7d2be87d5b88d9ba36870.gif" alt="1 nhà ăn 2 nhà">
+
       </div>
 
-      <div class="banner-container">
-        <img class="banner" src="4b3b5c7be84bf67872287473b2826244.gif">
-        <img class="banner" src="4c32815049dfe0d8ad9c34c00b0ce1c2.gif">
-        <img class="banner" src="34196fc5a2fc374cfe55996e4b243c3d.gif">
-        <img class="banner" src="420afad1f76c1d4551d26f2797353afc.gif">
-        <img class="banner" src="694373ba86f5877b0a581ca0c88d63b7.gif">
-        <img class="banner" src="69257157627e7e4ee38ef136684ae919.gif">
+      <div class="banner-container"> <a href="#"></a>
+        <a href="#">
+          <img class="banner" src="4b3b5c7be84bf67872287473b2826244.gif">
+        </a>
+        <a href="#">
+          img class="banner" src="4c32815049dfe0d8ad9c34c00b0ce1c2.gif">
+        </a>
+        <a href="#">
+          <img class="banner" src="34196fc5a2fc374cfe55996e4b243c3d.gif">
+        </a>
+        <a href="#">
+          <img class="banner" src="420afad1f76c1d4551d26f2797353afc.gif">
+        </a>
+        <a href="#">
+          <img class="banner" src="694373ba86f5877b0a581ca0c88d63b7.gif">
+        </a>
+        <a href="#">
+          <img class="banner" src="69257157627e7e4ee38ef136684ae919.gif">
+        </a>
       </div>
     </header>
 
