--- a/day4/kqsx.html
+++ b/day4/kqsx.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ích Nước Lợi Nhà Cái</title>
   <link rel="stylesheet" href="style-kqxs.css">
+  <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
+  <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
 </head>
 <body>
   <div id="page-container">
