--- a/day4/kqsx.html
+++ b/day4/kqsx.html
@@ -259,7 +259,7 @@
         <div id="kha-panh">
           <figure>
             <img src="749076864177586488913943191723062470901760n-15736271421871695474391-crop-1573627146616352463460.png" alt="kha-panh">
-            <figcaption>Chia sẻ của một anh em tham gia gói VIP</figcaption>
+            <figcaption>Chia sẻ của một anh em về bờ nhờ gói VIP</figcaption>
           </figure>
         </div>
 
