--- a/day4-1/kqsx.html
+++ b/day4-1/kqsx.html
@@ -292,7 +292,7 @@
       <div id="copy-logo-slogan">
         <p>Ketqua.net - Ích nước lợi nhà cái</p>
         <div id="copy-logo">
-          <img src="_dmca_premi_badge_4.png" alt="">
+          <img src="dmca.png" alt="">
           <p>Copyright ketqua.net - 2017</p>
         </div>
 
