--- a/day4-1/kqsx.html
+++ b/day4-1/kqsx.html
@@ -107,9 +107,9 @@
 
           <tbody>
             <tr>
-              <th>Ký tự</th>
+              <th class="marked">Ký tự</th>
               <td>
-                <div>
+                <div class="marked">
                   <p>1RH-7RH-11RH-10RH-8RH-5RH</p>
                 </div>
               </td>
@@ -125,9 +125,9 @@
             </tr>
 
             <tr>
-              <th>Giải nhất</th>
+              <th class="marked">Giải nhất</th>
               <td>
-                <div>
+                <div class="marked">
                   <p>90034</p>
                 </div>
               </td>
@@ -146,15 +146,15 @@
             </tr>
 
             <tr>
-              <th rowspan="2">Giải ba</th>
+              <th class="marked" rowspan="2">Giải ba</th>
               <td>
-                <div class="three-container">
+                <div class="three-container marked">
                   <p>31986</p>
                 </div>
-                <div class="three-container">
+                <div class="three-container marked">
                   <p>01608</p>
                 </div>
-                <div class="three-container">
+                <div class="three-container marked">
                   <p>68954</p>
                 </div>
               </td>
@@ -162,13 +162,13 @@
           
             <tr>
               <td>
-                <div class="three-container">
+                <div class="three-container marked">
                   <p>71290</p>
                 </div>
-                <div class="three-container">
+                <div class="three-container marked">
                   <p>84959</p>
                 </div>
-                <div class="three-container">
+                <div class="three-container marked">
                   <p>79813</p>
                 </div>
               </td>
@@ -193,15 +193,15 @@
             </tr>
 
             <tr>
-              <th rowspan="2">Giải năm</th>
+              <th class="marked" rowspan="2">Giải năm</th>
               <td>
-                <div class="three-container">
+                <div class="three-container marked">
                   <p>1819</p>
                 </div>
-                <div class="three-container">
+                <div class="three-container marked">
                   <p>2901</p>
                 </div>
-                <div class="three-container">
+                <div class="three-container marked">
                   <p>2990</p>
                 </div>
               </td>
@@ -209,13 +209,13 @@
           
             <tr>
               <td>
-                <div class="three-container">
+                <div class="three-container marked">
                   <p>1272</p>
                 </div>
-                <div class="three-container">
+                <div class="three-container marked">
                   <p>9511</p>
                 </div>
-                <div class="three-container">
+                <div class="three-container marked">
                   <p>4408</p>
                 </div>
               </td>
@@ -237,18 +237,18 @@
             </tr>
 
             <tr>
-              <th>Giải bảy</th>
+              <th class="marked">Giải bảy</th>
               <td>
-                <div class="four-container">
+                <div class="four-container marked">
                   <p>46</p>
                 </div>
-                <div class="four-container">
+                <div class="four-container marked">
                   <p>36</p>
                 </div>
-                <div class="four-container">
+                <div class="four-container marked">
                   <p>75</p>
                 </div>
-                <div class="four-container">
+                <div class="four-container marked">
                   <p>50</p>
                 </div>
               </td>
