--- a/buoi3/popular.html
+++ b/buoi3/popular.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="stylemass.css">
-  <link rel="icon" href="../favicon-16x16.png">
+  <link rel="icon" href="favicon-16x16.png">
   <title>Popular</title>
 </head>
 <body>
