--- a/day4-1/kqsx.html
+++ b/day4-1/kqsx.html
@@ -266,6 +266,7 @@
       </div>
 
       <div id="right-container">
+
         <div id="news-title-container">
           <p>Tin tức xố số mới nhất</p>
         </div>
@@ -277,6 +278,12 @@
             <li class="news-list-items"><a href="#">Dự đoán xổ số miền trung ngày 26-10-2020</a></li>
           </ul>
         </div>
+
+        <div id="out-link">
+          <a href="../day4-2/index.html">Quay về trang đối tác cực mạnh: Facebok.cơm</a>
+        </div>
+
+
 
       </div>
 
@@ -290,6 +297,7 @@
         <li class="footer-nav-items"><a href="#">Xổ số Vietlott</a></li>
       </ul>
       <div id="copy-logo-slogan">
+        
         <p>Ketqua.net - Ích nước lợi nhà cái</p>
         <div id="copy-logo">
           <img src="dmca.png" alt="">
