--- a/day4-2/register.html
+++ b/day4-2/register.html
@@ -65,6 +65,10 @@
         <p><a href="#">Tạo Trang</a> dành cho người nổi tiếng, nhãn hiệu hoặc doanh nghiệp.</p>
       </div>
 
+      <div id="new-form">
+        
+      </div>
+
     </div>
   </main>
    
