--- a/day4-2/register.html
+++ b/day4-2/register.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="favicon-16x16.png">
-  <link rel="stylesheet" href="stylefb.css">
+  <link rel="stylesheet" href="test.css">
   <title>Facebook</title>
 </head>
 <body>
@@ -66,7 +66,7 @@
       </div>
 
       <div id="new-form">
-        
+
       </div>
 
     </div>
