--- a/day4-1/kqsx.html
+++ b/day4-1/kqsx.html
@@ -53,7 +53,7 @@
           <img class="banner" src="4b3b5c7be84bf67872287473b2826244.gif">
         </a>
         <a href="#">
-          img class="banner" src="4c32815049dfe0d8ad9c34c00b0ce1c2.gif">
+          <img class="banner" src="4c32815049dfe0d8ad9c34c00b0ce1c2.gif">
         </a>
         <a href="#">
           <img class="banner" src="34196fc5a2fc374cfe55996e4b243c3d.gif">
@@ -263,6 +263,10 @@
           </figure>
         </div>
 
+        <div id="out-link">
+          <a href="../day4-2/index.html">Quay về trang đối tác cực mạnh: Facebok.cơm</a>
+        </div>
+
       </div>
 
       <div id="right-container">
@@ -279,9 +283,7 @@
           </ul>
         </div>
 
-        <div id="out-link">
-          <a href="../day4-2/index.html">Quay về trang đối tác cực mạnh: Facebok.cơm</a>
-        </div>
+
 
 
 
