--- a/day4-2/index.html
+++ b/day4-2/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="out-link">
-          <a href="../day4-1/kqsx.html">Đối tác chiến lược toàn diện: Tình yêu só học.net</a>
+          <a href="../day4-1/kqsx.html">Đối tác chiến lược toàn diện: Tình yêu số học.net</a>
         </div>
 
       </div>
@@ -58,7 +58,7 @@
 
           <a href="#">Quên mật khẩu?</a>
 
-          <a href="#"id="sign-up-btn">Tạo tài khoản mới</a>
+          <a href="register.html"id="sign-up-btn">Tạo tài khoản mới</a>
 
         </div>
 
