--- a/day4-2/register.html
+++ b/day4-2/register.html
@@ -11,61 +11,136 @@
   <main>
     <div id="page-container">
 
-      <div id="left-container">
+      <div id="upper-container">
 
         <img id="logo" src="FBWordmark_Hex-RGB-1024-2.png" alt="logo">
 
-        <h1>Đăng nhập gần đây</h1>
-
-        <p style="line-height: 30px; color: rgb(107, 107, 107);">Nhấp vào ảnh của bạn hoặc thêm tài khoản.</p>
-
-        <div id="recent-login-container">
-
-          <div class="recent-login-items">
-            <a href="#">
-              <img src="79515135_10111007623880301_5111576226921709568_o.jpg" alt="zuck">
-              <p>Zuckerberg</p>
-            </a>
-          </div>
-
-          <div class="recent-login-items">
-            <a href="#">
-              <div id="plus-icon"style="">
-                <img style="width: initial; ;" src="output-onlinepngtools.png">
-              </div>
-              <p>Thêm tài khoản</p>
-            </a>
-          </div>
-
-        </div>
-
-        <div class="out-link">
-          <a href="../day4-1/kqsx.html">Đối tác chiến lược toàn diện: Tình yêu só học.net</a>
-        </div>
-
       </div>
 
-      <div id="right-container">
+      <div id="lower-container">
         <div id="area-container">
 
+          <div id="title-container">
+            <h1>Đăng ký</h1>
+            <p>Nhanh chóng và dễ dàng.</p>
+          </div>
+
           <div id="form-container">
-            <form id="log-in-form"action="#">
-              <input id="log-in-id" type="text" placeholder="Email hoặc số điện thoại">
-              <input id="log-in-ps"type="password" placeholder="Mật khẩu">
-              <a href="#" id="log-in-btn">Đăng nhập</a>
+            <form id="sign-up-form"action="#">
+              <input class="half-size" id="sign-up-last" type="text" placeholder="Họ">
+              <input class="half-size" id="sign-up-first" type="text" placeholder="Tên">
+              <input class="full-size" id="sign-up-id" type="text" placeholder="Số di dộng hoặc email">
+              <input class="full-size" id="sign-up-ps"type="password" placeholder="Mật khẩu mới">
+              <p class="labels">Ngày sinh</p>
+              <select class="third-size" id="dob" name="dob">
+                <option value="default">Ngày</option>    
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+                <option value="16">16</option>
+                <option value="17">17</option>
+                <option value="18">18</option>
+                <option value="19">19</option>
+                <option value="20">20</option>
+                <option value="21">21</option>
+                <option value="22">22</option>
+                <option value="23">23</option>
+                <option value="24">24</option>
+                <option value="25">25</option>
+                <option value="26">26</option>
+                <option value="27">27</option>
+                <option value="28">28</option>
+                <option value="29">29</option>
+                <option value="30">30</option>
+                <option value="31">31</option>
+              </select>
+
+              <select class="third-size" id="mob" name="mob">
+                <option value="default">Tháng</option>    
+                <option value="1">Tháng 1</option>
+                <option value="2">Tháng 2</option>
+                <option value="3">Tháng 3</option>
+                <option value="4">Tháng 4</option>
+                <option value="5">Tháng 5</option>
+                <option value="6">Tháng 6</option>
+                <option value="7">Tháng 7</option>
+                <option value="8">Tháng 8</option>
+                <option value="9">Tháng 9</option>
+                <option value="10">Tháng 10</option>
+                <option value="11">Tháng 11</option>
+                <option value="12">Tháng 12</option>
+              </select>
+
+              <select class="third-size" id="yob" name="yob">
+                <option value="default">Năm</option>
+                <option value="2010">2010</option>
+                <option value="2009">2009</option>
+                <option value="2008">2008</option>
+                <option value="2007">2007</option>
+                <option value="2006">2006</option>
+                <option value="2005">2005</option>
+                <option value="2004">2004</option>
+                <option value="2003">2003</option>    
+                <option value="2002">2002</option>
+                <option value="2001">2001</option>
+                <option value="2000">2000</option>
+                <option value="1999">1999</option>
+                <option value="1998">1998</option>
+                <option value="1997">1997</option>
+                <option value="1996">1996</option>
+                <option value="1995">1995</option>
+                <option value="1994">1994</option>
+                <option value="1993">1993</option>
+                <option value="1992">1992</option>
+                <option value="1991">1991</option>
+                <option value="1990">1990</option>
+                <option value="1989">1989</option>
+                <option value="1988">1988</option>
+                <option value="1987">1987</option>
+                <option value="1986">1986</option>
+                <option value="1985">1985</option>
+                <option value="1984">1984</option>                
+              </select>
+
+              <p class="labels">Giới tính</p>
+
+              <form id="gender">
+                <div class="third-size" >
+                  <label for="male">Nam</label>
+                  <input type="radio" id="male" name="gender" value="male">
+                </div>
+                <div class="third-size" >
+                  <label for="fem">Nữ</label>
+                  <input type="radio" id="fem" name="gender" value="fem">
+                </div>
+                <div class="third-size" >
+                  <label for="other">Tùy chỉnh</label>                
+                  <input type="radio" id="other" name="gender" value="other">
+                </div>
+              </form>
+
             </form>
           </div>
 
-          <a href="#">Quên mật khẩu?</a>
+          <p id="notice">Bằng cách nhấp vào Đăng ký, bạn đồng ý với <a href="#">Điều khoản</a>, <a href="#">Chính sách dữ liệu</a> và <a href="#">Chính sách cookie</a> của chúng tôi. Bạn có thể nhận được thông báo của chúng tôi qua SMS và hủy nhận bất kỳ lúc nào</p>
 
-          <a href="#"id="sign-up-btn">Tạo tài khoản mới</a>
-
+          <div id="buttons">
+            <a href="#"id="sign-up-btn" style="background-color: #42b72a;">Đăng ký</a>
+            <a href="index.html"id="log-in-btn" style="background-color: #125ab9;">Quay về đăng nhập</a>
+          </div>
         </div>
-
-        <p><a href="#">Tạo Trang</a> dành cho người nổi tiếng, nhãn hiệu hoặc doanh nghiệp.</p>
-      </div>
-
-      <div id="new-form">
 
       </div>
 
