--- a/day4-2/register.html
+++ b/day4-2/register.html
@@ -126,7 +126,7 @@
                   <input type="radio" id="fem" name="gender" value="fem">
                 </div>
                 <div class="third-size" >
-                  <label for="other">Tùy chỉnh</label>                
+                  <label id="that" for="other">Tùy chỉnh</label>                
                   <input type="radio" id="other" name="gender" value="other">
                 </div>
               </form>
