--- a/day4-2/register-module.html
+++ b/day4-2/register-module.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="favicon-16x16.png">
-  <link rel="stylesheet" href="test.css">
+  <link rel="stylesheet" href="register-style.css">
   <title>Facebook</title>
 </head>
 <body>
@@ -17,22 +17,22 @@
 
       </div>
 
-      <div id="lower-container">
-        <div id="area-container">
+      <div id="reg-container">
+        <div id="reg-area-container">
 
-          <div id="title-container">
+          <div id="reg-title-container">
             <h1>Đăng ký</h1>
             <p>Nhanh chóng và dễ dàng.</p>
           </div>
 
-          <div id="form-container">
-            <form id="sign-up-form"action="#">
-              <input class="half-size" id="sign-up-last" type="text" placeholder="Họ">
-              <input class="half-size" id="sign-up-first" type="text" placeholder="Tên">
-              <input class="full-size" id="sign-up-id" type="text" placeholder="Số di dộng hoặc email">
-              <input class="full-size" id="sign-up-ps"type="password" placeholder="Mật khẩu mới">
-              <p class="labels">Ngày sinh</p>
-              <select class="third-size" id="dob" name="dob">
+          <div id="reg-form-container">
+            <form id="reg-sign-up-form"action="#">
+              <input class="half-size" id="reg-sign-up-last" type="text" placeholder="Họ">
+              <input class="half-size" id="reg-sign-up-first" type="text" placeholder="Tên">
+              <input class="full-size" id="reg-sign-up-id" type="text" placeholder="Số di dộng hoặc email">
+              <input class="full-size" id="reg-sign-up-ps"type="password" placeholder="Mật khẩu mới">
+              <p class="reg-labels">Ngày sinh</p>
+              <select class="third-size" id="reg-dob" name="reg-dob">
                 <option value="default">Ngày</option>    
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -67,7 +67,7 @@
                 <option value="31">31</option>
               </select>
 
-              <select class="third-size" id="mob" name="mob">
+              <select class="third-size" id="reg-mob" name="reg-mob">
                 <option value="default">Tháng</option>    
                 <option value="1">Tháng 1</option>
                 <option value="2">Tháng 2</option>
@@ -83,7 +83,7 @@
                 <option value="12">Tháng 12</option>
               </select>
 
-              <select class="third-size" id="yob" name="yob">
+              <select class="third-size" id="reg-yob" name="reg-yob">
                 <option value="default">Năm</option>
                 <option value="2010">2010</option>
                 <option value="2009">2009</option>
@@ -114,31 +114,31 @@
                 <option value="1984">1984</option>                
               </select>
 
-              <p class="labels">Giới tính</p>
+              <p class="reg-labels">Giới tính</p>
 
-              <form id="gender">
+              <form id="reg-gender">
                 <div class="third-size" >
                   <label for="male">Nam</label>
-                  <input type="radio" id="male" name="gender" value="male">
+                  <input type="radio" id="male" name="reg-gender" value="male">
                 </div>
                 <div class="third-size" >
                   <label for="fem">Nữ</label>
-                  <input type="radio" id="fem" name="gender" value="fem">
+                  <input type="radio" id="fem" name="reg-gender" value="fem">
                 </div>
                 <div class="third-size" >
                   <label id="that" for="other">Tùy chỉnh</label>                
-                  <input type="radio" id="other" name="gender" value="other">
+                  <input type="radio" id="other" name="reg-gender" value="other">
                 </div>
               </form>
 
             </form>
           </div>
 
-          <p id="notice">Bằng cách nhấp vào Đăng ký, bạn đồng ý với <a href="#">Điều khoản</a>, <a href="#">Chính sách dữ liệu</a> và <a href="#">Chính sách cookie</a> của chúng tôi. Bạn có thể nhận được thông báo của chúng tôi qua SMS và hủy nhận bất kỳ lúc nào</p>
+          <p id="reg-notice">Bằng cách nhấp vào Đăng ký, bạn đồng ý với <a href="#">Điều khoản</a>, <a href="#">Chính sách dữ liệu</a> và <a href="#">Chính sách cookie</a> của chúng tôi. Bạn có thể nhận được thông báo của chúng tôi qua SMS và hủy nhận bất kỳ lúc nào</p>
 
-          <div id="buttons">
-            <a href="#"id="sign-up-btn" style="background-color: #42b72a;">Đăng ký</a>
-            <a href="index.html"id="log-in-btn" style="background-color: #125ab9;">Quay về đăng nhập</a>
+          <div id="reg-buttons">
+            <a href="#"id="reg-sign-up-btn" style="background-color: #42b72a;">Đăng ký</a>
+            <a href="index.html"id="reg-log-in-btn" style="background-color: #125ab9;">Quay về đăng nhập</a>
           </div>
         </div>
 
