--- a/day5/index.html
+++ b/day5/index.html
@@ -954,5 +954,10 @@
     </div>
   </header>
 
+  <main>
+    <div id="main-container">
+      <a href="../day4-2/index.html">Đối tác cũng chiến lược toàn diện: Fây Búc</a>
+    </div>
+  </main>
 </body>
 </html>
