--- a/day5/index.html
+++ b/day5/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style-test.css">
+  <link rel="icon" href="favicon-32x32.png">
   <title>Là Zá Đa</title>
 </head>
 <body>
