--- a/day6/index.html
+++ b/day6/index.html
@@ -35,7 +35,7 @@
 
     </header>
 
-    <div class="main-area">
+    <aside>
       <nav>
         <ul class="nav-list">
           <li class="nav-items">Dashboard</li>
@@ -48,73 +48,74 @@
           <li class="nav-items">UI Elements</li>
         </ul>
       </nav>
+    </aside>
 
-      <main>
-        <section>
-          <div class="section-title">
-            <h1>Overview</h1>
-            <a href="#">+ ADD ITEM</a>
-          </div>
+    <main>
+      <section>
+        <div class="section-title">
+          <h1>Overview</h1>
+          <a href="#">+ ADD ITEM</a>
+        </div>
 
-          <div class="section-area">
+        <div class="section-area">
 
-            <div class="section-items">
-              <div class="section-items-symbol">
+          <div class="section-items">
+            <div class="section-items-symbol">
 
-              </div>
-              <div class="section-items-content">
-                <p class="number">10,368</p>
-                <p class="text">members online</p>
-              </div>
-            </div> 
+            </div>
+            <div class="section-items-content">
+              <p class="number">10,368</p>
+              <p class="text">members online</p>
+            </div>
+          </div> 
 
-            <div class="section-items">
-              <div class="section-items-symbol">
+          <div class="section-items">
+            <div class="section-items-symbol">
 
-              </div>
-              <div class="section-items-content">
-                <p class="number">388,688</p>
-                <p class="text">items sold</p>
-              </div>
-            </div> 
+            </div>
+            <div class="section-items-content">
+              <p class="number">388,688</p>
+              <p class="text">items sold</p>
+            </div>
+          </div> 
 
-            <div class="section-items">
-              <div class="section-items-symbol">
+          <div class="section-items">
+            <div class="section-items-symbol">
 
-              </div>
-              <div class="section-items-content">
-                <p class="number">1,086</p>
-                <p class="text">this week</p>
-              </div>
-            </div> 
+            </div>
+            <div class="section-items-content">
+              <p class="number">1,086</p>
+              <p class="text">this week</p>
+            </div>
+          </div> 
 
-            <div class="section-items">
-              <div class="section-items-symbol">
+          <div class="section-items">
+            <div class="section-items-symbol">
 
-              </div>
-              <div class="section-items-content">
-                <p class="number">#1,060,386</p>
-                <p class="text">total earnings</p>
-              </div>
-            </div> 
+            </div>
+            <div class="section-items-content">
+              <p class="number">#1,060,386</p>
+              <p class="text">total earnings</p>
+            </div>
+          </div> 
 
-            <div class="big-items">
-              <div class="big-items-tittle">
-                <h2>Recent Reports</h2>
-              </div>
-            </div> 
+          <div class="big-items">
+            <div class="big-items-tittle">
+              <h2>Recent Reports</h2>
+            </div>
+          </div> 
 
-            <div class="big-items">
-              <div class="big-items-tittle">
-                <h2>Chart By %</h2>
-              </div>
-            </div> 
+          <div class="big-items">
+            <div class="big-items-tittle">
+              <h2>Chart By %</h2>
+            </div>
+          </div> 
 
-          </div>
-        </section>
+        </div>
+      </section>
 
-      </main>
-    </div>
+    </main>
+    
   </div>
 </body>
 </html>
