--- a/day6/index.html
+++ b/day6/index.html
@@ -27,15 +27,17 @@
           <input type="image" src="search--v1.png" name="submit" alt="submit"> 
         </form>
         <div class="account">
-          <img src="PromoHP7_Harry_Potter.jpg" alt="avatar">
-          <p>Harry Potter</p>
+          <a class="account-link" href="#">
+            <img src="PromoHP7_Harry_Potter 2.jpg" alt="avatar">
+            <p>Harry Potter</p>
+          </a>
         </div>
 
       </div>
 
     </header>
 
-    <div class="main-area">
+    <main>
       <nav>
         <ul class="nav-list">
           <li class="nav-items">Dashboard</li>
@@ -49,7 +51,7 @@
         </ul>
       </nav>
 
-      <main>
+      <div class="main-area">
         <section>
           <div class="section-title">
             <h1>Overview</h1>
@@ -113,8 +115,8 @@
           </div>
         </section>
 
-      </main>
-    </div>
+      </div>
+    </main>
   </div>
 </body>
 </html>
